--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "resend": "^4.6.0",
     "twilio": "^5.7.0",
     "zod": "^3.25.67"
   },
